load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_run_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//web:eslint/package_json.bzl", eslint_pkg = "bin")
load("@npm//web:vite/package_json.bzl", vite_pkg = "bin")
load(":vitest.bzl", "vitest_test")

# Link all npm packages into this package's node_modules so that js_binary
# and js_run_binary targets can resolve imports at build time.
npm_link_all_packages(name = "node_modules")

exports_files(["eslint.config.js"])

# Public eslint binary used by the lint aspect in //:lint.bzl
eslint_pkg.eslint_binary(
    name = "eslint_bin",
    visibility = ["//visibility:public"],
)

# ── Step 1: OpenAPI JSON schema ───────────────────────────────────────────────
# Runs manage.py spectacular via the Python genrule tool.
# Output: openapi.json
#
# Cache behaviour: re-runs only when api/**, backend/**, or workflow_files
# change (transitively through //tools:generate_schema's deps).

genrule(
    name = "openapi_schema",
    outs = ["openapi.json"],
    cmd = "$(execpath //tools:generate_schema) $@",
    tools = ["//tools:generate_schema"],
    visibility = ["//visibility:public"],
)

# ── npm tool binaries ─────────────────────────────────────────────────────────
# Generated js_run_binary-compatible targets for each npm CLI tool.
# These macros create the js_binary + entry_point wiring via directory_path
# so the Node toolchain is resolved correctly and node is on PATH.

vite_pkg.vite(
    name = "vite_run",
    srcs = [":web_lib"] + glob([".env.*"], allow_empty = True),
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
)

ts_project(
    name = "tsc_typecheck",
    srcs = glob(
        [
            "src/*.ts",
            "src/*.tsx",
            "src/components/**/*.ts",
            "src/components/**/*.tsx",
            "src/pages/**/*.ts",
            "src/pages/**/*.tsx",
            "src/util/*.ts",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
            "src/test-setup.ts",
            "src/util/generated-types.ts",  # genrule output, added via srcs below
        ],
    ) + [":generated_types_gen"],
    tsconfig = ":tsconfig.app.json",
    declaration = False,
    no_emit = True,
    resolve_json_module = True,
    ts_build_info_file = "node_modules/.tmp/tsconfig.app.tsbuildinfo",
    deps = [":node_modules"],
    tags = ["lint"],
)

eslint_pkg.eslint(
    name = "eslint_run",
    srcs = [
        "eslint.config.js",
        ":web_lib",
        ":web_test_configs",
        ":web_test_files",
    ],
    args = [
        ".",
        "--max-warnings=0",
    ],
    chdir = package_name(),
    stdout = "eslint_check.log",
    tags = ["lint"],
)

# ── TypeScript generated types ────────────────────────────────────────────────
# Runs generate-types.mjs with openapi.json as input.
# Declared here (not in //web) because Bazel forbids outs with up-level '..'
# references — outputs must live within the declaring package.
#
# Cache behaviour: re-runs only when openapi.json content changes.

js_binary(
    name = "generate_types_bin",
    data = [
        ":node_modules/openapi-typescript",
        ":node_modules/typescript",
    ],
    entry_point = "scripts/generate-types.mjs",
)

js_run_binary(
    name = "generated_types_gen",
    srcs = ["//web:openapi_schema"],
    outs = ["src/util/generated-types.ts"],
    args = [
        "$(execpath //web:openapi_schema)",
        "$(execpath src/util/generated-types.ts)",
    ],
    tool = "//web:generate_types_bin",
)

js_library(
    name = "generated_types",
    srcs = [":generated_types_gen"],
    visibility = ["//visibility:public"],
)

# ── Common utils library ──────────────────────────────────────────────────────

js_library(
    name = "util_lib",
    srcs = [
        "src/util/api.ts",
        "src/util/format.ts",
        "src/util/normalizeWorkflowFields.ts",
        "src/util/optionalValues.ts",
        "src/util/types.ts",
        "src/util/useAsync.ts",
        "src/util/workflow.ts",
    ],
    deps = [
        ":generated_types",
        "//:workflow_js",
    ],
)

# ── Web source library ────────────────────────────────────────────────────────

js_library(
    name = "web_lib",
    srcs = glob(
        [
            "src/*.ts",
            "src/*.tsx",
            "src/assets/**/*",
            "src/components/**/*",
            "src/pages/**/*",
            "*.json",
            "*.config.*",
            "public/**/*",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
            "src/util/**/*",
        ],
    ) + [
        "index.html",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":generated_types",
        ":node_modules",
        ":util_lib",
        "//:workflow_js",
    ],
)

# ── Component source libraries ────────────────────────────────────────────────
# Fine-grained js_library targets for test isolation: each test target depends
# only on the components it exercises, so changing one component does not
# invalidate unrelated test targets.
#
# Dependency relationships mirror the actual import graph so Bazel tracks
# changes correctly. web_lib (used for build) remains the authoritative
# all-sources target; these are testing-only slices of the same source tree.

# Consolidated component library to reduce analysis overhead.
js_library(
    name = "web_components_lib",
    srcs = glob(
        ["src/components/**/*"],
        exclude = ["src/components/__tests__/**/*"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":generated_types",
        ":node_modules",
        ":util_lib",
        "//:workflow_js",
    ],
)

# Consolidated pages library.
js_library(
    name = "web_pages_lib",
    srcs = glob(
        ["src/pages/**/*"],
        exclude = ["src/pages/__tests__/**/*"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
        ":util_lib",
        ":web_components_lib",
    ],
)

# Config files needed by every test target (tsconfig, package.json, etc.)
js_library(
    name = "web_test_configs",
    srcs = [
        "package.json",
        "src/cloudinary-widget.d.ts",
        "src/test-setup.ts",
        "src/yaml.d.ts",
        "tsconfig.app.json",
        "tsconfig.json",
        "tsconfig.node.json",
        "tsconfig.test.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
    deps = [":node_modules"],
)

filegroup(
    name = "web_test_files",
    srcs = glob([
        "src/**/*.test.ts",
        "src/**/*.test.tsx",
    ]),
    visibility = ["//visibility:public"],
)


# ── Granular web test targets ─────────────────────────────────────────────────
# Each target runs a focused subset of tests and depends only on the components
# it exercises.  A change to an isolated component re-runs only the relevant
# target(s) rather than the full suite.

# Consolidated test targets.
vitest_test(
    name = "web_components_test",
    srcs = glob(["src/components/__tests__/*.test.tsx"]),
    deps = [":web_components_lib"],
)

vitest_test(
    name = "web_pages_test",
    srcs = glob(["src/pages/__tests__/*.test.tsx", "src/pages/__tests__/*.test.ts"]),
    deps = [":web_pages_lib"],
)

vitest_test(
    name = "web_util_test",
    srcs = glob(["src/util/__tests__/*.test.ts", "src/util/*.test.ts"]),
    deps = [":util_lib"],
)

vitest_test(
    name = "web_normalize_workflow_fields_test",
    srcs = [
        "src/util/__tests__/normalizeWorkflowFields.test.ts",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":util_lib",
    ],
)

vitest_test(
    name = "web_format_test",
    srcs = [
        "src/util/__tests__/format.test.ts",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":util_lib",
    ],
)

vitest_test(
    name = "web_app_test",
    srcs = ["src/App.test.tsx"],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":web_lib",
    ],
)

# ── Web test suite ────────────────────────────────────────────────────────────
# Aggregate target: `bazel test //web:web_test` runs all web tests.
# Individual targets above run only when their inputs change.

test_suite(
    name = "web_test",
    tests = [
        ":web_components_test",
        ":web_pages_test",
        ":web_util_test",
    ],
)

# ── Web build ─────────────────────────────────────────────────────────────────
# Alias for the vite build target produced by the vite_bin macro above.

alias(
    name = "web_build",
    actual = ":vite_run",
    visibility = ["//visibility:public"],
)

# ── TypeScript type-check ─────────────────────────────────────────────────────

alias(
    name = "tsc_check",
    actual = ":tsc_typecheck",
    tags = ["lint"],
)

# ── ESLint ────────────────────────────────────────────────────────────────────

alias(
    name = "eslint_check",
    actual = ":eslint_run",
    tags = ["lint"],
)
